# Thermal-imaging

./: .gitignore  CMakeLists.txt  sdkconfig.defaults
components/bsp/: CMakeLists.txt
components/bsp/Spi/: spi_comm.c  spi_comm.h
components/bsp/Usart/: uart_comm.c  uart_comm.h
components/middlewares/: CMakeLists.txt
components/middlewares/Camera/: uvc_camera.c  uvc_camera.h
components/middlewares/Lcd/: st7735s.c  st7735s.h
components/middlewares/Uvc/: uvc_host_reader.c  uvc_host_reader.h
main/: CMakeLists.txt  idf_component.yml  lv_conf.h  main.c
main/App/ui/: ui.c  ui.h
